changed overflow to auto from scroll to prevent the scroll bars from appearing all the time on chromium

--- a/client/src/styles/WishlistView.css
+++ b/client/src/styles/WishlistView.css
@@ -5,7 +5,7 @@
 
 #wishlistMainContent {
     width: calc(100% - 260px);
-    overflow: scroll;
+    overflow: auto;
 }
 
 .clear {
